opam-version: "1.2"
version: "0.2"
maintainer: "Didier Wenzek <didier.wenzek@acidalie.com>"
authors: ["Didier Wenzek <didier.wenzek@acidalie.com>"]
homepage: "https://github.com/didier-wenzek/ocaml-traildb"
bug-reports: "https://github.com/didier-wenzek/ocaml-traildb/issues"
dev-repo: "https://github.com/didier-wenzek/ocaml-traildb.git"
license: "MIT"
build: [["dune" "build" "-p" name "-j" jobs]]
build-test: [["dune" "runtest" "-p" name "-j" jobs]]
depends: [
  "uuidm"
  "dune" {build & >= "1.0"}
  "oUnit"  {test}
]
depexts: [
  [[ "debian"] ["libtraildb-dev"]]
]
